--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded ">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -49,7 +50,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 padding-0">
-                <img src="assets/imgs/topImg.png" class="topImg"alt="">
+                <img src="assets/imgs/topImg_wTxt.png" class="topImg"alt="">
             </div>
         </div>
     </div>
