formatted and styled the bottom nav made it work responsively

--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
             <div class="col-12 padding-0" id="mapFooter">
                 <img src="assets/imgs/Layer 20.png" class="mapImg" alt="">
                 <img src="assets/imgs/Rectangle 3.png" id="footerImg" alt="">
+                <div class"col-12 padding-0">
+                    <span id="bottomNav">
+                        <a href="#">home</a>
+                        <a href="#">about</a>
+                        <a href="#">brunch</a>
+                        <a href="#">reservations</a> 
+                        <a href="#">events</a> 
+                        <a href="#">contact</a>
+                        <a>/</a>
+                        <a href="#">718.111.1234</a>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
