added a fixed nav to the template using jQuery, changed the sizes of the toggle switch for small screens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-faded ">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top fixed-top">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,8 @@
     <!--Section one Just Brunch-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 padding-0">
-                <img src="assets/imgs/topImg_wTxt.png" class="topImg"alt="">
+            <div class="col-12 padding-0" >
+                <img src="assets/imgs/topImg_wTxt.png" class="topImg" alt="">
             </div>
         </div>
     </div>
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
