Changed the title to text of the first section, I still need to make it responsive. And add the text the the rest of the sections and the forms.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300i|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300i|Roboto:900" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -50,7 +50,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 padding-0" >
-                <img src="assets/imgs/topImg_wTxt.png" class="topImg" alt="">
+                <img src="assets/imgs/topImg.png" class="topImg" alt="">
+                <div class "col-12 padding-0">
+                    <div id="brandTitle">
+                        <h1>a cool place.</h1>
+                        <h6>JUST BRUNCH.</h6>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
