--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top"><!--navbar-fixed-top-->
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
