Added text for the  about us section it is only working for 1075px screen, I need to make it responsive. Im considering changing the gray box a div instead of a picture

--- a/index.html
+++ b/index.html
@@ -60,24 +60,23 @@
             </div>
         </div>
     </div>
-     <!--<div class='row'>
-        <div class='aboutContent'>
-           <img src="assets/imgs/aboutimg.jpg" id="aboutImg">
-            <img src="assets/imgs/Layer 12sm.png" align='right' id="mealTop" alt=""> 
-            <img src="assets/imgs/Rectangle 1.png" align='left' id="graySqu" alt="">
-            <a href="#" id="aboutBtn">learn more.</a>
-        </div>
-    </div>-->
     <!--Section two About us-->
     <!-- Columns are always 100% wide, on mobile and desktop -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 padding-0">
-            
                 <img src="assets/imgs/Rectangle 1.png"  id="graySqu" alt="">
             </div>
             <div class="col-6 padding-0">
             <img src="assets/imgs/Layer 12sm.png" id="mealAbout" alt="">
+            </div>
+        </div>
+        <div class "col-12 padding-0">
+            <div id="aboutContent">
+                <h1>about us.</h1>
+                <p>You can tell a cool place is a pretty cool place because we use an edgy, bold serif-font and that tropical leaf motif that’s
+                    fucking everywhere right now. <br><br>People come here literally only to take pictures of our food for Instagram. And we only
+                    charge $30 for avocado toast. Do you get the point?</p>
             </div>
         </div>
     </div>
