--- a/index.html
+++ b/index.html
@@ -65,18 +65,22 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 padding-0">
-                <img src="assets/imgs/Rectangle 1.png"  id="graySqu" alt="">
+                <!-- <img src="assets/imgs/Rectangle 1.png"  id="graySqu" alt=""> -->
+                <div id="graySqu">
+                    <div class "col-6 padding-0">
+                        <div id="aboutContent">
+                            <h1>about us.</h1>
+                            <p>You can tell a cool place is a pretty cool place because we use an edgy, bold serif-font and that tropical leaf motif
+                                that’s fucking everywhere right now.
+                                <br>
+                                <br>People come here literally only to take pictures of our food for Instagram. And we only charge $30 for avocado
+                                toast. Do you get the point?</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-6 padding-0">
             <img src="assets/imgs/Layer 12sm.png" id="mealAbout" alt="">
-            </div>
-        </div>
-        <div class "col-12 padding-0">
-            <div id="aboutContent">
-                <h1>about us.</h1>
-                <p>You can tell a cool place is a pretty cool place because we use an edgy, bold serif-font and that tropical leaf motif that’s
-                    fucking everywhere right now. <br><br>People come here literally only to take pictures of our food for Instagram. And we only
-                    charge $30 for avocado toast. Do you get the point?</p>
             </div>
         </div>
     </div>
