--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,11 +15,13 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300i|Roboto:900" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top"><!--navbar-fixed-top-->
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <!--navbar-fixed-top-->
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse ml-auto" id="navbarNav">
@@ -49,14 +52,14 @@
     <!--Section one Just Brunch-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 padding-0" >
+            <div class="col-12 padding-0">
                 <img src="assets/imgs/topImg.png" class="topImg" alt="">
-                <div class "col-12 padding-0">
+                <!-- <div class "col-12 padding-0">
                     <div id="brandTitle">
                         <h1>a cool place.</h1>
                         <h6>JUST BRUNCH.</h6>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -70,17 +73,17 @@
                     <div class "col-6 padding-0">
                         <div id="aboutContent">
                             <h1>about us.</h1>
-                            <p>You can tell a cool place is a pretty cool place because we use an edgy, bold serif-font and that tropical leaf motif
-                                that’s fucking everywhere right now.
+                            <p>You can tell a cool place is a pretty cool place because we use an edgy, bold serif-font and
+                                that tropical leaf motif that’s fucking everywhere right now.
                                 <br>
-                                <br>People come here literally only to take pictures of our food for Instagram. And we only charge $30 for avocado
-                                toast. Do you get the point?</p>
+                                <br>People come here literally only to take pictures of our food for Instagram. And we only charge
+                                $30 for avocado toast. Do you get the point?</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-6 padding-0">
-            <img src="assets/imgs/Layer 12sm.png" id="mealAbout" alt="">
+                <img src="assets/imgs/Layer 12sm.png" id="mealAbout" alt="">
             </div>
         </div>
     </div>
@@ -88,7 +91,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 padding-0">
-    
+
             </div>
             <div class="col-6 padding-0">
                 <img src="assets/imgs/Layer 16.png" id="mealBrunch" alt="">
@@ -101,7 +104,7 @@
             <div class="col-12 padding-0 container">
                 <!--<img src="assets/imgs/Layer 17 copytxt.png"id="reservImg" alt="">-->
                 <img src="assets/imgs/Layer 17 copy.png" id="reservImg" alt="">
-                <div class="centered">reservations.</div>
+                <!-- <div class="centered">reservations.</div> -->
             </div>
         </div>
     </div>
@@ -112,7 +115,7 @@
                 <img src="assets/imgs/Layer 19.png" id="eventImg" alt="">
             </div>
             <div class="col-4 padding-0">
-                
+
             </div>
         </div>
     </div>
@@ -123,13 +126,13 @@
             <div class="col-12 padding-0" id="mapFooter">
                 <img src="assets/imgs/Layer 20.png" class="mapImg" alt="">
                 <img src="assets/imgs/Rectangle 3.png" id="footerImg" alt="">
-                <div class"col-12 padding-0">
+                <div class "col-12 padding-0">
                     <span id="bottomNav">
                         <a href="#">home</a>
                         <a href="#">about</a>
                         <a href="#">brunch</a>
-                        <a href="#">reservations</a> 
-                        <a href="#">events</a> 
+                        <a href="#">reservations</a>
+                        <a href="#">events</a>
                         <a href="#">contact</a>
                         <a>/</a>
                         <a href="#">718.111.1234</a>
@@ -144,4 +147,5 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
